--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ bower_components
 .bower-registry
 .bower-tmp
 
+.firebase/
+.firebaserc
+firebase.json
+
 ### Emacs ###
 # -*- mode: gitignore; -*-
 *~
