--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
+    "generate": "DEPLOY_ENV=GH_PAGES nuxt generate",
     "generate-win": "cross-env DEPLOY_ENV=GH_PAGES && nuxt generate",
     "deploy": "gh-pages -d dist -t",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
